feat: Add chpl num history to xml/xsd and listing details obj
[#OCD-3901]